card text revert. footer landcape mobile made left aligned and spacing fixed

--- a/web/themes/custom/myusf/sass/src/partials/_components.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_components.scss
@@ -225,8 +225,7 @@ a.card-rollover {
 		    	margin-bottom: .4rem;
 		    }
 		}
-		.card-text,
-		.card-text-short {
+		.card-text {
 		    font-size: .9rem;
 		    line-height: 1.77;
 		    color: $white!important;
